Update and rename Leetbook初级算法.md to 189. Rotate Array.md
3 methods.

--- a/189. Rotate Array.md
+++ b/189. Rotate Array.md
@@ -45,7 +45,7 @@ Space complexity: O(1)
 class Solution:
     def rotate(self, nums: List[int], k: int) -> None:
         n = len(nums)
-        round = math.gcd(n, k)
+        round = math.gcd(n, k)  # decides the loop times.
        	for i in range(round):
             pin, temp = i, nums[i]
             start = pin
@@ -53,9 +53,10 @@ class Solution:
                 next = (pin + k) % n
                 nums[next], temp = temp, nums[next]
                 pin = next
-                if start == pin:  # avoiding loop
+                if start == pin:  # if gcd is not 1, avoiding loop
                     break      
                 
 ```
+Time complexity: O(n)
 
-<img src="C:\Users\86151\AppData\Roaming\Typora\typora-user-images\image-20220812164912744.png" alt="image-20220812164912744" style="zoom:50%;" />
+Space complexity: O(1)
