189. Rotate Array. Using 3 methods.

--- a/189. Rotate Array.md
+++ b/189. Rotate Array.md
@@ -52,7 +52,7 @@ class Solution:
             while True:
                 next = (pin + k) % n
                 nums[next], temp = temp, nums[next]
-                pin = next
+                pin = next  # this is important! it change the pin to the num that has been switched with temp
                 if start == pin:  # if gcd is not 1, avoiding loop
                     break      
                 
