--- a/189. Rotate Array.md
+++ b/189. Rotate Array.md
@@ -9,7 +9,7 @@ class Solution:
     def rotate(self, nums: List[int], k: int) -> None:
         if k > len(nums):
             k = k % len(nums)
-        temp = nums[len(nums) - k :]  # u
+        temp = nums[len(nums) - k :]
         for i in range(len(nums) - k - 1, -1, -1):
             nums[i + k] = nums[i]
         for t in range(len(temp)):
@@ -45,14 +45,14 @@ Space complexity: O(1)
 class Solution:
     def rotate(self, nums: List[int], k: int) -> None:
         n = len(nums)
-        round = math.gcd(n, k)  # decides the loop times.
+        round = math.gcd(n, k)  # decides the loop times. gcd: greatest common divisor
        	for i in range(round):
             pin, temp = i, nums[i]
             start = pin
             while True:
                 next = (pin + k) % n
                 nums[next], temp = temp, nums[next]
-                pin = next  # this is important! it change the pin to the num that has been switched with temp
+                pin = next  # this is important! it changes the pin to the num that has been switched with temp
                 if start == pin:  # if gcd is not 1, avoiding loop
                     break      
                 
