--- a/98. Validate Binary Search Tree.md
+++ b/98. Validate Binary Search Tree.md
@@ -60,6 +60,7 @@ class Solution:
         return True
 ```
 
+<img src="https://user-images.githubusercontent.com/104201605/188347195-adc7c58c-d84d-4bb8-be5f-3e5a11bf72c3.PNG" width="450" height="300">
 author：LeetCode-Solution
 link：https://leetcode.cn/problems/validate-binary-search-tree/solution/yan-zheng-er-cha-sou-suo-shu-by-leetcode-solution/
 
